part5/5.3/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exercises
  labels:
    istio.io/dataplane-mode: ambient
