part5/5.3/manifests/log-output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          emptyDir: {}
        - name: config-volume
          configMap:
            name: log-output-config
      containers:
        - name: writer
          image: log-output:5.3
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
        - name: reader
          image: log-output:5.3
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
            - name: config-volume
              mountPath: /usr/src/app/config
---
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
  labels:
    app: log-output
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
