part5/5.3/manifests/ping-pong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  namespace: exercises
  labels:
    app: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: ping-pong:5.3
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
  labels:
    app: ping-pong
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
